# wasocshared

./: .gitignore  .lychee.toml  .mise.toml  .rumdl.toml  .vale.ini  _typos.toml  hugo.email.toml  hugo.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  dependency-review.yml  linkcheck-external.yml  pages.yml  scorecard.yml  send-advisory.yml  tlpclear-githubpages.yml  tlpclear-testing.yml
.mise/tasks/: new-advisory  new-guideline  new-page  new-training
archetypes/: advisory.md  default.md  guideline.md  training.md
docs/: _index.md  onboarding.md  threat-activity.md
docs/advisories/: 20230110001-Number-Matching-MFA.md  20230922003-Increase-in-QR-Code-Phishing-Technique.md  20260416001-Flatpak-Critical-Vulnerability.md  20260417001-Microsoft-Critical-Monthly-Updates.md  20260417002-New-Critical-ICS-Vulnerabilities.md  20260424001-Cisco-Secure-Firewall-ASA-and-Secure-Firewall-Threat-Defense.md  _index.md
docs/baselines/: data-sources.md  security-operations.md
docs/guidelines/: annual-implementation-reporting.md  e8-assessment.md  further-five.md  incident-reporting.md  network-management.md  patch-management.md  secure-configuration.md
docs/onboarding/: honey-traps.md  sentinel-guidance.md
docs/training/: analyst-induction.md  azure-basics.md  devsecops-induction.md
layouts/: index.atom.xml  index.json  index.rss.xml
layouts/_default/: baseof.html  list.html  single.email.html  single.html
layouts/partials/: page-title.html  sidebar.html  toc.html
tests/: test_wasoc.py
wasoc/: __init__.py  advisory.py
(+73 files in other folders)
