[project]
name = "wasocshared"
version = "0.1.0"
description = "WA SOC shared guidance and advisory site"
readme = "docs/_index.md"
requires-python = ">=3.13"
dependencies = ["sendgrid==6.12.5"]

[dependency-groups]
dev = ["pytest==9.0.2", "ruff==0.15.12", "taplo==0.9.3"]

[tool.uv]
package = false


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
